Fix dark mode data context for index route, tweak footer logo margin

--- a/app/styles/sass/styles.scss
+++ b/app/styles/sass/styles.scss
@@ -372,7 +372,7 @@ footer {
   text-align: right;
 
   ul {
-    margin: 5px 0 0 0;
+    margin: 2px 0 0 0;
     padding: 0;
   }
 
